--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,8 @@ name: Cypress Spect Report
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  merge_group:
+    branches: [ "*" ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -23,14 +17,36 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      # uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - uses: cypress-io/github-action@v4.2.0
+      with:
+        # record: # optional
+        # Set configuration values. Separate multiple values with a comma. The values set here override any values set in your configuration file.
+        # config: # optional
+        # Path to the cypress config file where configuration values are set.
+        # config-file: # optional, default is 
+        # Sets Cypress environment variables
+        # env: # optional
+        # Command for starting local server in the background
+        start: npm run report # optional
+        # Whether or not to run install
+        install: true # optional
+        
+        # Whether or not to run tests
+        runTests: true # optional
+        # Amount of time to wait for wait-on url to be available
+        # wait-on-timeout: # optional
+        # Whether or not to load balance tests using multiple containers
+        # parallel: # optional
+        # # Group setting for tests
+        # group: # optional
+        # # Tag setting for tests
+        # tag: # optional
+        # # Working directory containing Cypress folder
+        # working-directory: # optional
+        # Whether or not to use headed mode
+        headed: false # optional
+        # Provide a specific specs to run
+        spec: *.feature # optional
+        
