--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,5 +48,5 @@ jobs:
         # Whether or not to use headed mode
         headed: false # optional
         # Provide a specific specs to run
-        spec: *.feature # optional
+        spec: "*.feature" # optional
         
